added our team in sidebar and page

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@ body {
   font-family: "Open Sans", sans-serif;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
